# swarm-attack

./: -  .gitignore  BLINDNESS_ANALYSIS.md  BUGS_FOUND.md  BUG_BASH_REPORT_2025_12_20.md  CHANGELOG.md  CLAUDE.md  CONFLICT_ANALYSIS.md  EXPERT_TEAM_BUG_INVESTIGATION_PROMPT.md  INTEGRATION_STRATEGY.md  MIGRATION.md  QUICKSTART.md  README.md  TEST_BASELINE.md  VERIFICATION_REPORT.md  buggy_code.py  compound-engineering-vs-swarm-comparison.md  config.yaml  fix_plan.md  pyproject.toml
.claude/: test.md
.claude/plans/: chief-of-staff-bugs.md  (+1 more)
.swarm/: continuation-prompt-20251231-final.xml  continuation-prompt-20251231-session2.xml  continuation-prompt-20251231.xml  progress.txt  test.json
docs/: ADAPTIVE_QA_AGENT_DESIGN.md  ADAPTIVE_QA_AGENT_DESIGN_PROMPT.md  AGENTS.md  AGENT_PROMPTS.md  CONTEXT_FIX_PLAN.md  CONTINUATION_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROMPT.md  IMPLEMENTATION_PROMPT_PART2.md  JARVIS_MVP.md  LIBRARIAN.md  MEMORY.md  QA_VALIDATION_REPORT.md  SEMANTIC-QA.md  SPEC.md  SWARM_SETUP_GUIDE.md  USER_GUIDE.md
external_dashboard/: __init__.py
prompts/: 2025-12-23_bug-fix-implementation.md  2025-12-23_test-fix-phase2.md  2025-12-23_test-implementation-alignment.md  2025-12-29_git-archaeology-cleanup.xml  2025-12-29_v030-bug-fixes-tdd.xml  2025-12-29_v030-manual-testing.xml  2025-12-30_chief-of-staff-v3-completion.xml  2025-12-30_test-infra-fixes.xml  2025-12-31_commit-quality-review-continuation.xml  2025-12-31_continue-bug-bash-session.xml  2025-12-31_debate-retry-continuation.xml  2025-12-31_dispatcher-claude-cli-implementation.xml  2025-12-31_fix-bug-bash-coder-architecture.xml  2025-12-31_fix-swarm-attack-bugs-via-bug-bash.xml  2025-12-31_living-spec-system.xml  2025-12-31_qa-agent-bug-fixes.xml  2025-12-31_qa-enhancements-continuation.xml  2025-12-31_qa-enhancements-part2.xml  2025-12-31_swarm-attack-bug-fixes.xml  AUTO_FIX_CONTINUATION_TEAM.xml  AUTO_FIX_CONTINUATION_TEAM_V2.xml  AUTO_FIX_IMPLEMENTATION_PROMPT.xml  AUTO_FIX_IMPLEMENTATION_TEAM.xml  AUTO_FIX_SPEC_REVIEW_CONTINUATION.xml  CHIEF_OF_STAFF_PROMPT.md  QA_E2E_VERIFICATION_PROMPT.xml  chief-of-staff-v2-full-session.md  chief-of-staff-v2-implementation.md  chief-of-staff-v2-spec-prompt.md
scripts/: migrate_test_names.py
specs/: 2025-12-31_coo-swarm-attack-unification-architecture.xml  2026-01-01_continuation-prompt.xml  2026-01-01_integration-gaps-fix-spec.xml  2026-01-01_open-source-librarian-agent.xml  2026-01-01_open-source-librarian-bugs.md  2026-01-01_pre-existing-test-failures-spec.xml  2026-01-01_skipped-tests-investigation-spec.xml  2026-01-05_autopilot-orchestration-CONTINUATION_PROMPT.xml  2026-01-05_autopilot-orchestration-IMPLEMENTATION_PROMPT.xml  2026-01-05_autopilot-orchestration-best-practices.update.xml  2026-01-05_autopilot-orchestration-best-practices.xml  2026-01-05_strategic-findings-and-priorities.md  AUTO_FIX_DESIGN_SPEC.md  REFACTOR_001_EXTRACT_PURE_FUNCTIONS.md
src/: __init__.py  codex_client.py  consensus_checker.py  sub_agent.py
swarm_attack/: BUG_BASHING_LOG.md  HOW_TO_USE.md  __init__.py  __main__.py  bug_models.py  bug_orchestrator.py  bug_state_store.py  cli.py  cli_legacy.py  cli_recovery.py  codex_client.py  config.py  context_builder.py  contracts.py  debate_retry.py  edge_cases.py  errors.py  event_logger.py  github_sync.py  gpt5_client.py  hello_autopilot.py  llm_clients.py  logger.py  models.py  orchestrator.py  preflight.py  progress_logger.py  rate_limit_tracker.py  recovery.py  session_finalizer.py  session_initializer.py  session_manager.py  skill_loader.py  state_machine.py  state_store.py  universal_context_builder.py  verification_tracker.py
swarm_attack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_buggy_code.py  test_skill_frontmatter.py  test_stale_locks.py
(+1110 files in other folders)
