[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-attack"
version = "0.3.0"
description = "Autonomous AI-powered feature development CLI - run from any project directory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Philip Cortes"}
]
keywords = ["ai", "automation", "development", "claude", "codex", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
swarm-attack = "swarm_attack.cli:cli_main"

[project.urls]
Homepage = "https://github.com/pcortes/swarm-attack"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarm_attack*"]

[tool.setuptools.package-data]
swarm_attack = ["*.md", "*.yaml", "*.yml"]

[tool.coverage.run]
source = ["swarm_attack/qa"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

# BUG-17: pytest-asyncio configuration
# BUG-6: --import-mode=importlib prevents module name collisions with duplicate basenames
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
